--- a/apps/dash/templates/dash/quotes.html
+++ b/apps/dash/templates/dash/quotes.html
@@ -3,13 +3,13 @@
 	<title>Quotes</title>
 </head>
 <body>
-	<h2>Welcome {{users.first_name}}</h2>
+	<h2>Welcome {{request.session.user.first_name}}</h2>
 	<h3><a href='logout'>Logout</a></h3>
 	<h2> Quotable Quotes</h2>
-		{% for quote in quotes %}
-			<h2>{{quote.author}}</h2>
-			<p>{{quote.quote}}</p>
-			<!-- <h4>Posted by <a href ='/{{users.id}}/user/show'>{{users.first_name}}</a></h4> -->
+		{% for quotes in quote %}
+			<h2>Author: {{quotes.auther}}</h2>
+			<p>Quote: {{quotes.quotes}}</p>
+			<h4>Posted by <a href ='/{{users.id}}/user/show'>{{quotes.user}}</a></h4>
 		{% endfor %}
 	<h2>Contribute a Quote</h2>
 	{% if messages %}
